Correct OR search text, make dt width 100% to prevent unnecessary wrapping, fixed filter width in handheld to prevent contents from being cut off

--- a/public/stylesheets/site/2.0/18-zone-searchbrowse.css
+++ b/public/stylesheets/site/2.0/18-zone-searchbrowse.css
@@ -80,17 +80,13 @@ form.filters dt span {
   cursor: pointer;
 }
 
-.filters dd {
+.filters dd, .filters dt, .filters .submit input {
   width: 100%;
 }
 
 .filters .submit {
   text-align: center;
   padding-right: 0;
-}
-
-.filters .submit input {
-  width: 100%;
 }
 
 /*END== */
