--- a/public/stylesheets/site/2.0/25-role-handheld.css
+++ b/public/stylesheets/site/2.0/25-role-handheld.css
@@ -78,6 +78,10 @@ h1 a img {
   float: none;
 }
 
+#main dl.filters {
+  width: auto;
+}
+
 #footer {
   background: #900;
 }
